css/style.css
/* ... */
/* Hide Hamburger */
#hamnav label, #hammy {
  display: none;
  cursor: pointer;
}

/* Horizontal Menu Items */
.search-open {
  background-image: url("../img/icons/search.png");
  background-repeat: no-repeat;
  background-size: cover;
  width: 24px;
  height: 24px;
  margin-left: 1rem;
}

#hamitems .menu {
  margin: 80px 1rem 0 0;
  list-style: none;
  text-transform: uppercase;
}

#hamitems .menu a {
  text-align: right;
}

#search-cb {
  display: none;
}
.search{
  width:calc(100% - 1rem);
  margin:0 auto;
}
.form-inline{
  width:100%;
  position: relative;
}
.search .form-inline .search-query {
  width:calc(100% - 24px);
  font-size: 1.3rem;
  color: white;
  background: none;
  border: 0;
  border-bottom: 1px solid #423f7b;
  padding: 0.4rem;
}
.search .form-inline .button{
  position: relative;right:0;
  vertical-align: middle;
  width::24px;
  height:24px;

}
.search .form-inline .element-invisible{display:none;}
#searchform {
  margin-left: auto;
}

#search::placeholder {
  font-style: italic;
  color: #ccc;
}

#search-button {
  color: #000;
  background: none;
  border: none;
  margin-top: 5px;
}

#search-button svg {
  color: #fff;
  cursor: pointer;
}

.search-icon {
  fill: #fff;
}

/* -------------------------------------------------------------------------- */
/*	3. Mobile Menu
/* -------------------------------------------------------------------------- */
@media (max-width:1023px) {



  .fade {
    display: inline-block;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0;
    pointer-events: none;
    z-index: 1;
    background: black;
    transition: .3s
  }

  .no-scroll-menu-open-hammy #hamnav {
    z-index: 2;
  }

  /* Show Hamburger Icon */
  #hamnav label {
    position: relative;
    z-index: 99;
    display: block;
    color: white;
    font-style: normal;
    font-size: 1.6em;
    padding: 10px;
    top: 0;
  }

  /* Toggle Show/Hide Menu */
  #hamitems {
    display: none;
    position: absolute;
    top: -15px;
    right: -4px;
    width: 275px;
    background: #004080;
    height: 100vh;
    border-left: 1px solid #423f7b;
  }

  #hamnav input[type=checkbox]:checked~#hamitems {
    display: block;
  }

  #hamnav input[type=checkbox]:checked+label {
    z-index: 999;
    opacity: 0.8;
  }

  #wpadminbar {
    position: fixed;
  }

  .menu-top-menu-container {
    position: absolute;
    top: 78px;
    right: 0;
    text-align: right;
    width: 100%;
  }

  .menu-top-menu-container>#hamitems .menu {
    margin: 0;
    padding: 0;
  }

  .menu-top-menu-container>#hamitems .menu>li {
    border-top: 1px solid #423f7b;
    padding: 0.8rem 0;
  }

  .menu-top-menu-container>#hamitems .menu>li:last-child {
    border-bottom: 1px solid #423f7b;
  }

  .menu-top-menu-container>#hamitems .menu>li a {
    margin-right: 1rem;
  }

  #hamitems .menu>li a:link, #hamitems .menu>li a:visited {
    font-size: 1.5rem;
  }

  .no-scroll-menu-open-hammy, .no-scroll-menu-open-search-cb {
    position: fixed;
    height: 100%;
    width: 100%;
  }

  .no-scroll-menu-open-hammy #fademenu {
    pointer-events: all;
    opacity: 0.7;
  }

  .no-scroll-menu-open-search-cb #fadesearch {
    pointer-events: all;
    opacity: 0.7;
  }

  .search-bg-mb #search-button {
    width: 2rem;
    height: 2rem;
  }

  main .author-container {
    max-width: 850px;
    font-size: 1.2rem;
    margin: 0 auto;
    padding: 0;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    background-color: #111c26;
    -webkit-box-shadow: 2px 2px 6px 1px rgba(0, 0, 0, 0.5);
    -moz-box-shadow: 2px 2px 6px 1px rgba(0, 0, 0, 0.5);
    box-shadow: 2px 2px 6px 1px rgba(0, 0, 0, 0.5);
    border: 1px solid rgba(71, 71, 71, 0.5);
    border-bottom: 1px solid rgb(29, 29, 29);
    border-right: 1px solid rgb(29, 29, 29);
    border-radius: 1rem;
    padding: 1rem;
    color: #eee;
  }
}

/* -------------------------------------------------------------------------- */
/*	4. Template
/* -------------------------------------------------------------------------- */
.float-left {
  float: left;
}

.float-right {
  float: right;
}

.clr {
  clear: both;
}

.link-button {
  background-color: transparent;
  border: none;
  cursor: pointer;
  display: inline;
  margin: 0;
  padding: 0;
}

.link-button:hover {
  opacity: 0.8;
}

.link-button:focus {
  outline: none;
  opacity: 1;
}

.aligncenter {
  text-align: center;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.section {
  display: inline-block;
  width: 100%;
  /*padding: 24px 0;*/
}

.section-header, .section-header h5 {
  font-size: 2rem;
  font-family: arvo, "sourceSansPro";
  text-transform: uppercase;
    margin: 12px 0 12px;
}

.feed-container h2 {
  font-size: 1.5rem;
  font-family: arvo, "sourceSansPro";
  text-transform: uppercase;
    margin: 12px 0 12px;
}

.section-header h5 {
  font-family: arvo, "sourceSansPro";
  font-size: 2rem;
  }

.feed-container h2 {
  font-family: arvo, "sourceSansPro";
  font-size: 1.5rem;
  }


.item-page{
  font-size: 1.2rem;
    margin: 0 auto;
    max-width: 850px;
    padding: 2rem 2rem;
    -webkit-box-shadow: 2px 2px 6px 1px rgba(0, 0, 0, 0.5);
    -moz-box-shadow: 2px 2px 6px 1px rgba(0, 0, 0, 0.5);
    box-shadow: 2px 2px 6px 1px rgba(0, 0, 0, 0.5);
    border: 1px solid rgba(71, 71, 71, 0.5);
    border-bottom: rgb(29, 29, 29);
    border-right: rgb(29, 29, 29);
    border-radius: 1rem;
    background-color: #111c26;
    font-family: "sourceSansPro";
      }

.item-page .page-header h2 {
  text-transform: uppercase;
  font-weight: bold;
  margin: 0 0 12px 0;
  font-size: 1.5rem;
  font-family: "sourceSansPro-SemiBold";
  text-align: center;
}
.item-page .article-info{
  margin:0;
}

.section-gray {
  /* background-image:linear-gradient( #030609 , #0b1215 2%, #11181c 98%, #09111a 100%); */
  background: #0b1215;
  position: relative;
}
/* ... */

